# pdm-dockerize

./: .copier-answers.yml  .editorconfig  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  tox.ini
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
src/pdm_dockerize/: __init__.py  commands.py  config.py  entrypoint.py  filters.py  installer.py
tests/: conftest.py  test_commands.py  test_entrypoint.py  test_filters.py  test_installer.py  test_pdm_dockerize.py
tests/__snapshots__/test_entrypoint/: test_filtering[exclude-all].sh  test_filtering[exclude-list].sh  test_filtering[include-all-but-prefix].sh  test_filtering[include-all].sh  test_filtering[include-list].sh  test_filtering[include-prefix-except].sh  test_filtering[no-filter].sh  test_global_env.sh  test_global_env_file.sh  test_pythonpath_explicit_src_layout.sh  test_pythonpath_implicit_src_layout.sh  test_serialization[composite].sh  test_serialization[env].sh  test_serialization[env_file-override-precedance].sh  test_serialization[env_file-precedance].sh  test_serialization[pre-post].sh  test_serilization[args-placeholder-with-defaults].sh  test_serilization[args-placeholder].sh  test_serilization[call-with-arguments].sh  test_serilization[call].sh  test_serilization[cmd-as-dict].sh  test_serilization[cmd-as-list].sh  test_serilization[cmd-as-str].sh  test_serilization[composite-inline].sh  test_serilization[composite].sh  test_serilization[env].sh  test_serilization[env_file-override-precedance].sh  test_serilization[env_file-override].sh  test_serilization[env_file-precedance].sh  test_serilization[env_file].sh  test_serilization[no_script].sh  test_serilization[pre-post].sh  test_serilization[shared-env].sh  test_serilization[shared-env_file].sh  test_serilization[shell].sh  test_serilization[whitespaces].sh
tests/__snapshots__/test_pdm_dockerize/: test_generate_docker_dist.sh
