[project]
name = "pdm-dockerize"
description = "Help generating docker images from PDM projects"
authors = [
    {name = "Axel Haustant", email = "noirbizarre@gmail.com"},
]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
keywords = []
dynamic = ["version"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Plugins",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Code Generators",
    "Typing :: Typed",
]

dependencies = [
    "pdm>=2.19",
]
[project.urls]
Homepage = "https://github.com/noirbizarre/pdm-dockerize"
Documentation = "https://github.com/noirbizarre/pdm-dockerize#readme"
Repository = "https://github.com/noirbizarre/pdm-dockerize"
Issues = "https://github.com/noirbizarre/pdm-dockerize/issues"

[project.entry-points.pdm]
dockerize = "pdm_dockerize:plugin"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[dependency-groups]
dev = [
    {include-group = "test"},
    {include-group = "lint"},
    {include-group = "release"},
    "tox>=4.22",
]
test = [
    "pdm[pytest]",
    "pytest>=9.0.0",
    "pytest-sugar>=1.0.0",
    "coverage>=7.0.0",
    "syrupy>=5.0.0",
    "shellcheck-py>=0.9.0.6",
]
lint = [
    "codespell>=2.2.6",
    "mypy>=1.5.1",
    "ruff>=0.3.0",
    "tomli; python_version<'3.11'",
]
release = [
    "emotional",
]

[tool.pdm]
plugins = [
    "sync-pre-commit-lock",
]

[tool.pdm.version]
source = "scm"
write_to = "pdm_dockerize/VERSION"

[tool.pdm.scripts]
test.help = "Run the test suite"
test.cmd = "pytest"

lint.help = "Lint all tracked files using pre-commit"
lint.cmd = "pre-commit run --all-files"

format.help = "Format the code according to known rules"
format.composite = [
    "codespell --write-changes --interactive 2",
    # See: https://docs.astral.sh/ruff/formatter/#sorting-imports
    "ruff check --select I --fix-only --show-fixes src tests",
    "ruff format src tests"
]

typing.help = "Full typing linting (includes imported packages and uncommmited files)"
typing.cmd = "mypy src tests --warn-unused-ignores"

cover.help = "Run the test suite with coverage"
cover.composite = [
    "coverage erase",
    "_cover:run {args}",
    "coverage report --skip-covered",
    "coverage html -d reports/coverage",
    "_cover:xml",
]
# Hidden shell tasks to benefit from variable expansion
"_cover:run".shell = """
    coverage run --append -m pytest \
    --junitxml=${JUNIT_XML:-reports/junit.xml} \
"""
"_cover:xml".shell = "coverage xml -o ${COVERAGE_XML:-reports/coverage.xml}"


changelog.help = "Update the changelog"
changelog.cmd = "cz changelog --incremental"


[tool.commitizen]
name = "emotional"
github = "noirbizarre/pdm-dockerize"
order_by_scope = true
version_provider = "scm"
major_version_zero = true  # Remove this line for the first 1.x release

[tool.pdm.dockerize]
include = "*"

[tool.pytest]
addopts = ["-ra", "--log-disable", "unearth.evaluator", "--log-disable", "unearth.collector", "--log-disable", "unearth.auth", "--log-disable", "pdm.termui"]
norecursedirs = [".git", "build", "dist"]
testpaths = [
    "src/",
    "tests/",
]


[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "tests/*",
]

[tool.coverage.report]
exclude_also = [
    'def __repr__',
    'if TYPE_CHECKING:',
]
ignore_errors = true

[tool.ruff]
line-length = 100
respect-gitignore = true
show-fixes = true
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # McCabe # fake8-comprehension
    "C",
    # Pyupgrade
    "UP",
    # isort
    "I001"
]
extend-safe-fixes = ["C", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["pdm_dockerize"]
known-third-party = ["pytest", "syrupy"]


[tool.mypy]
exclude = [
    "docs",
    "build",
    "dist",
]


[tool.codespell]
skip = '__snapshots__,./reports'


[tool.tox]
requires = ["tox>=4.22"]
env_list = ["3.10", "3.11", "3.12", "3.13", "3.14"]

[tool.tox.env_run_base]
description = "Run tests suite against Python {base_python}"
dependency_groups = ["test"]
commands = [["pytest"]]
